--- a/Neo4J/Neo4J.ipynb
+++ b/Neo4J/Neo4J.ipynb
@@ -241,8 +241,8 @@
     "MATCH p=allShortestPaths((a)-[:INTERACTS*]-(b))\n",
     "RETURN p\"\"\"\n",
     "- Degree centrality (number of connections):\n",
-    "\"\"\"MATCH (c:Character)\n",
-    "RETURN c.name AS character, size( (c)-[:INTERACTS]-() ) AS degree ORDER BY degree DESC\"\n",
+    "\"\"\"MATCH (p:Product)\n",
+    "RETURN p.title AS product, size( (p)-[:ALSO_BOUGHT]-() ) AS degree ORDER BY degree DESC\"\n",
     "- Betweennes centrality(brokers of informations/clusters connectors)[requires apoc library]:\n",
     "\"\"\"MATCH (c:Character)\n",
     "WITH collect(c) AS characters\n",
@@ -255,6 +255,15 @@
     "CALL apoc.algo.closeness(['INTERACTS'], characters, 'BOTH') YIELD node, score\n",
     "RETURN node.name AS name, score ORDER BY score DESC\"\"\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
